# DataSaur-2026-Case-QazCode-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/: llm_api_examples.ipynb
src/: config.py  models.py  server.py
src/data_prep/: build_training_set.py  debug_extract.py  extract_features.py  generate_summaries.py  generate_synthetic.py
src/inference/: engine.py  feature_builder.py  llm_ranker.py  ranker.py  reranker.py  retriever.py
src/training/: build_features.py  evaluate_local.py  export_model.py  text_utils.py  train_ranker.py  train_retriever.py
