[project]
name = "hack-nu"
version = "0.1.0"
description = "Evaluates solutions on a given dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "ipykernel>=7.2.0",
    "openai>=2.21.0",
    "requests>=2.32.5",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pymorphy3>=2.0.0",
    "razdel>=0.5.0",
    "pandas>=2.0.0",
    "tqdm>=4.60.0",
    "pydantic-settings>=2.0.0",
    "lo",
    "loguru>=0.7.3",
    "datasets>=4.5.0",
    "accelerate>=1.12.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]
